@@ -6,5 +6,5 @@ requires 'Carp'                => 0;
 requires 'Data::MethodProxy'   => 0.03;
 
 on test => sub {
-    requires 'Test2::Suite' => 0;
+    requires 'Test2::V0' => '0.000071';
 };
