@@ -1,5 +1,5 @@
 #!/usr/bin/env perl
-use Test2::Bundle::Extended;
+use Test2::V0;
 
 {
     package Foo;
